--- a/tests/data/groundtruth/docling_v1/2203.01017v2.md
+++ b/tests/data/groundtruth/docling_v1/2203.01017v2.md
@@ -12,7 +12,6 @@
 
 The occurrence of tables in documents is ubiquitous. They often summarise quantitative or factual data, which is cumbersome to describe in verbose text but nevertheless extremely valuable. Unfortunately, this compact representation is often not easy to parse by machines. There are many implicit conventions used to obtain a compact table representation. For example, tables often have complex columnand row-headers in order to reduce duplicated cell content. Lines of different shapes and sizes are leveraged to separate content or indicate a tree structure. Additionally, tables can also have empty/missing table-entries or multi-row textual table-entries. Fig. 1 shows a table which presents all these issues.
 
-
 <!-- image -->
 
 Tables organize valuable content in a concise and compact representation. This content is extremely valuable for systems such as search engines, Knowledge Graph's, etc, since they enhance their predictive capabilities. Unfortunately, tables come in a large variety of shapes and sizes. Furthermore, they can have complex column/row-header configurations, multiline rows, different variety of separation lines, missing entries, etc. As such, the correct identification of the table-structure from an image is a nontrivial task. In this paper, we present a new table-structure identification model. The latter improves the latest end-toend deep learning model (i.e. encoder-dual-decoder from PubTabNet) in two significant ways. First, we introduce a new object detection decoder for table-cells. In this way, we can obtain the content of the table-cells from programmatic PDF's directly from the PDF source and avoid the training of the custom OCR decoders. This architectural change leads to more accurate table-content extraction and allows us to tackle non-english tables. Second, we replace the LSTM decoders with transformer based decoders. This upgrade improves significantly the previous state-of-the-art tree-editing-distance-score (TEDS) from 91% to 98.5% on simple tables and from 88.7% to 95% on complex tables.
@@ -21,11 +20,9 @@ Tables organize valuable content in a concise and compact representation. This c
 
 - b. Red-annotation of bounding boxes, Blue-predictions by TableFormer
 
-
 <!-- image -->
 
 - c. Structure predicted by TableFormer:
-
 
 <!-- image -->
 
@@ -234,13 +231,10 @@ Table 4: Results of structure with content retrieved using cell detection on Pub
 
 ## Example table from FinTabNet:
 
-
 <!-- image -->
 
 b. Structure predicted by TableFormer, with superimposed matched PDF cell text:
 <!-- image -->
-
-
 
 |                                                    |             | 論文ファイル   | 論文ファイル   | 参考文献   | 参考文献   |
 |----------------------------------------------------|-------------|----------------|----------------|------------|------------|
@@ -267,7 +261,6 @@ Text is aligned to match original for ease of viewing
 
 Figure 5: One of the benefits of TableFormer is that it is language agnostic, as an example, the left part of the illustration demonstrates TableFormer predictions on previously unseen language (Japanese). Additionally, we see that TableFormer is robust to variability in style and content, right side of the illustration shows the example of the TableFormer prediction from the FinTabNet dataset.
 <!-- image -->
-
 
 <!-- image -->
 
@@ -451,11 +444,21 @@ phan cell.
 
 Aditional images with examples of TableFormer predictions and post-processing can be found below.
 
+Figure 8: Example of a table with multi-line header.
+
+
 
 <!-- image -->
 
+Figure 9: Example of a table with big empty distance between cells.
+
+
 
 <!-- image -->
+
+Figure 10: Example of a complex table with empty cells.
+
+
 
 Figure 11: Simple table with different style and empty cells.
 <!-- image -->
@@ -466,23 +469,29 @@ Figure 12: Simple table predictions and post processing.
 Figure 13: Table predictions example on colorful table.
 <!-- image -->
 
+Figure 14: Example with multi-line text.
 
-<!-- image -->
-
-
-<!-- image -->
-
-
-<!-- image -->
 
 
 <!-- image -->
 
+<!-- image -->
 
 <!-- image -->
 
+<!-- image -->
+
+Figure 15: Example with triangular table.
+
+
 
 <!-- image -->
+
+<!-- image -->
+
+Figure 16: Example of how post-processing helps to restore mis-aligned bounding boxes prediction artifact.
+
+
 
 Figure 17: Example of long table. End-to-end example from initial PDF cells to prediction of bounding boxes, post processing and prediction of structure.
 <!-- image -->
