fix env var sourcing, remove unused imports
Signed-off-by: Panos Vagenas <35837085+vagenas@users.noreply.github.com>

--- a/docs/examples/rag_azuresearch.ipynb
+++ b/docs/examples/rag_azuresearch.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "load_dotenv()\n",
     "\n",
     "\n",
-    "def _get_env_from_colab_or_os(key):\n",
+    "def _get_env(key, default=None):\n",
     "    try:\n",
     "        from google.colab import userdata\n",
     "\n",
@@ -93,19 +93,19 @@
     "            pass\n",
     "    except ImportError:\n",
     "        pass\n",
-    "    return os.getenv(key)\n",
+    "    return os.getenv(key, default)\n",
     "\n",
     "\n",
-    "AZURE_SEARCH_ENDPOINT = os.getenv(\"AZURE_SEARCH_ENDPOINT\")\n",
-    "AZURE_SEARCH_KEY = os.getenv(\"AZURE_SEARCH_KEY\")  # Ensure this your Admin Key\n",
-    "AZURE_SEARCH_INDEX_NAME = os.getenv(\"AZURE_SEARCH_INDEX_NAME\", \"docling-rag-sample\")\n",
-    "AZURE_OPENAI_ENDPOINT = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
-    "AZURE_OPENAI_API_KEY = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
-    "AZURE_OPENAI_API_VERSION = os.getenv(\"AZURE_OPENAI_API_VERSION\", \"2024-10-21\")\n",
-    "AZURE_OPENAI_CHAT_MODEL = (\n",
-    "    os.getenv(\"AZURE_OPENAI_CHAT_MODEL\"),\n",
+    "AZURE_SEARCH_ENDPOINT = _get_env(\"AZURE_SEARCH_ENDPOINT\")\n",
+    "AZURE_SEARCH_KEY = _get_env(\"AZURE_SEARCH_KEY\")  # Ensure this your Admin Key\n",
+    "AZURE_SEARCH_INDEX_NAME = _get_env(\"AZURE_SEARCH_INDEX_NAME\", \"docling-rag-sample\")\n",
+    "AZURE_OPENAI_ENDPOINT = _get_env(\"AZURE_OPENAI_ENDPOINT\")\n",
+    "AZURE_OPENAI_API_KEY = _get_env(\"AZURE_OPENAI_API_KEY\")\n",
+    "AZURE_OPENAI_API_VERSION = _get_env(\"AZURE_OPENAI_API_VERSION\", \"2024-10-21\")\n",
+    "AZURE_OPENAI_CHAT_MODEL = _get_env(\n",
+    "    \"AZURE_OPENAI_CHAT_MODEL\"\n",
     ")  # Using a deployed model named \"gpt-4o\"\n",
-    "AZURE_OPENAI_EMBEDDINGS = os.getenv(\n",
+    "AZURE_OPENAI_EMBEDDINGS = _get_env(\n",
     "    \"AZURE_OPENAI_EMBEDDINGS\", \"text-embedding-3-small\"\n",
     ")  # Using a deployed model named \"text-embeddings-3-small\""
    ]
@@ -301,8 +301,6 @@
    ],
    "source": [
     "from azure.core.credentials import AzureKeyCredential\n",
-    "from azure.identity import DefaultAzureCredential\n",
-    "from azure.search.documents import SearchClient\n",
     "from azure.search.documents.indexes import SearchIndexClient\n",
     "from azure.search.documents.indexes.models import (\n",
     "    AzureOpenAIVectorizer,\n",
@@ -873,7 +871,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -887,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
