--- a/docs/examples/rag_azuresearch.ipynb
+++ b/docs/examples/rag_azuresearch.ipynb
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Embed and Upsert to Azure AI Search\n"
+    "#### Generate Embeddings and Upload to Azure AI Search\n"
    ]
   },
   {
@@ -498,8 +498,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 4: RAG Query with Azure OpenAI\n",
-    "Combine retrieval from Azure Search with Chat Completions (aka. grounding your LLM)"
+    "### Part 4: Perform RAG I\n",
+    "Combine retrieval from Azure AI Search with Azure OpenAI Chat Completions (aka. grounding your LLM)"
    ]
   },
   {
