--- a/docs/examples/rag_azuresearch.ipynb
+++ b/docs/examples/rag_azuresearch.ipynb
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 3: Create Azure Search Index and Push Chunk Embeddings\n",
+    "### Part 3: Create Azure AI Search Index and Push Chunk Embeddings\n",
     "We’ll define a vector index in Azure AI Search, then embed each chunk using Azure OpenAI and upload in batches."
    ]
   },
